delete pdf margin

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </p>
               <ul>
                 <li>Designed and updated layouts to meet usability and performance requirements.</li>
-                <li style="margin-bottom: 10px;">Coded using HTML, CSS and JavaScript to develop features for both
+                <li>Coded using HTML, CSS and JavaScript to develop features for both
                   mobile and desktop platforms.</li>
                 <li>Advocated for well-tested and documented, high quality code.</li>
                 <li>Produced websites compatible with multiple browsers.</li>
